--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,15 @@
 
 body {
   font-family: 'Kaushan Script', cursive; }
+
+header {
+  text-align: center;
+  background-color: #751B71;
+  padding: 15px 10px; }
+  header h1 {
+    font-family: 'Coiny', cursive;
+    font-weight: normal;
+    color: #f7e8f7; }
+
+body {
+  background-color: #E3B0E1; }
