--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -1,3 +1,12 @@
 body {
-    background-color: #E3B0E1;
+    background-color: #ffe5fc;
+}
+
+main {
+    text-align: center;
+
+    h2 {
+        color: #600055;
+        margin: 15px 0;
+    }
 }
