--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,42 @@ main {
     main form input[type='submit'] {
       color: #ffe5fc;
       background-color: #600055;
-      border: 1px solid #600055;
+      border: none;
       padding: 5px 15px;
       margin: 10px;
-      border-radius: 5px; }
+      border-radius: 5px;
+      font-family: 'Coiny', cursive;
+      font-size: 1rem;
+      transition: all .5s; }
+      main form input[type='submit']:hover {
+        color: #fff;
+        background-color: #540035; }
+  main #resultOutput {
+    margin: 25px auto; }
+    main #resultOutput span {
+      margin: 15px auto;
+      font-size: 1.1rem;
+      color: #eee;
+      padding: 15px;
+      border-width: 2px;
+      border-style: dotted; }
+      main #resultOutput span.wrong {
+        color: #b50000;
+        border-color: #b50000; }
+      main #resultOutput span.correct {
+        color: #04752a;
+        border-color: #04752a; }
+  main button {
+    background-color: #fff;
+    color: #600055;
+    border: none;
+    padding: 5px 15px;
+    margin: 10px;
+    border-radius: 5px;
+    font-family: 'Coiny', cursive;
+    font-size: 1rem;
+    transition: all .5s;
+    border: 2px solid #fee1fc; }
+    main button:hover {
+      background-color: #edd0eb;
+      color: #540035; }
